# emberframe-nodes

./: .comfyignore  .gitignore  README.md  REGISTRY.md  WORKFLOW.md  example_workflow_notes.md  nodes.py  pyproject.toml
.github/workflows/: publish_action.yml
wildcards/: Prompt_Civit_connoisseur34_07.txt  camera_angle_wildcard.txt  example_camera_angles.txt  example_lighting_styles.txt  example_scene_moods.txt  framing_wildcard.txt  lingerie.txt
workflows/: z-image_5.0_emberframe.json  z-image_5.0_emberframe_pid.json  z-image_5.1_emberframe_pid.json  z-image_5.2_emberframe_pid.json  z-image_5.4_emberframe.json  z-image_5.4_emberframe_PiD_Experimental.json
